# redteam_flowradar_NN-heuristic

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  compose.sh  compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: 2.build-publish.yml  3.create-release.yml
docs/: release-notes.md
examples/miner_commit/: Dockerfile  README.md  compose.yml  requirements.txt  submission.py  trained_vpn_model.txt  trained_vpn_weights.txt
examples/miner_commit/scripts/: build.sh  prepare_cic_vpn2016_csv.py  run_full_local_pipeline.sh  submission.py  train_vpn_model.py  train_vpn_weights.py
examples/miner_commit/src/: app.py  data_types.py
requirements/: requirements.dev.txt  requirements.redteam.txt
scripts/: build-docker.sh  bump-version.sh  clean.sh  get-version.sh  sync-versions.sh
src/flr_challenge/: challenge_manager.py  controller.py
src/flr_challenge/challenge/: .dockerignore  Dockerfile  requirements.txt
src/flr_challenge/challenge/api/: router.py
src/flr_challenge/challenge/api/core/configs/: _api.py  _challenge.py  _docs.py  _main.py
src/flr_challenge/challenge/api/core/constants/: _base.py  _regex.py
src/flr_challenge/challenge/api/core/dependencies/: auth.py
src/flr_challenge/challenge/api/endpoints/challenge/: __init__.py  _utils.py  payload_managers.py  router.py  schemas.py  service.py
src/flr_challenge/challenge/flowradar/: .dockerignore  Dockerfile  README.md  compose.yml
src/flr_challenge/challenge/flowradar/src/: app.py  data_types.py  submissions.py
src/flr_challenge/challenge/scripts/: docker-entrypoint.sh
templates/compose/: compose.override.dev.yml
templates/configs/challenge/: api.yml  docs.yml  security.yml
tests/: test_challenge_api.py  test_miner_commit_api.py  test_module.py
